--- a/IsochronDrafter/app.config
+++ b/IsochronDrafter/app.config
@@ -34,6 +34,12 @@
             <setting name="MythicPercentage" serializeAs="String">
                 <value>.125</value>
             </setting>
+            <setting name="LandsPerPack" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="NonLandsPerPack" serializeAs="String">
+                <value>14</value>
+            </setting>
         </IsochronDrafter.isochron>
     </userSettings>
 </configuration>
