add fuzzy lookup if card not found; add ScryfallCard for typed deserialization

--- a/IsochronDrafter/IsochronDrafter.csproj
+++ b/IsochronDrafter/IsochronDrafter.csproj
@@ -92,6 +92,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScryfallCard.cs" />
     <Compile Include="ServerWindow.cs">
       <SubType>Form</SubType>
     </Compile>
